Hidding scrollbar to prevent a graphic bug (TODO: find another solution)

--- a/public/css/gamerModule/questionPanel.css
+++ b/public/css/gamerModule/questionPanel.css
@@ -67,6 +67,10 @@
   transition: opacity 2s ease-in;
 }
 
+#questionPanel > :nth-child(2) > :last-child > p{
+  font-size: 0.8vw;
+}
+
 #questionPanel > :nth-child(3) > div {
   height: 80%;
   padding-left: 2%;
